--- a/packages/docs/src/styles/tools/_functions.scss
+++ b/packages/docs/src/styles/tools/_functions.scss
@@ -1,4 +1,3 @@
-// Calculate the flex-basis for a flexbox grid column
-@function grid-flex-basis($columns, $_grid: $grid) {
+@function grid-col-width($columns, $_grid: $grid) {
   @return (100% / map-get($_grid, 'columns')) * $columns;
 }
